@@ -1,6 +1,8 @@
 Release ...
 * tbl: Storage space expansions because of long lines inside a table are
   now done properly.
+* [nt]roff: No "illegal number" warning is printed anymore when a "\}" is
+  found as part of a possibly numeric argument, as in e.g. ".bp \}".
 
 Release 060221
 * [nt]roff: With the ".hylang" request, the individual parts of words
